fixed cut off headline in assets

--- a/src/app/data-management/pages/buckets/assets/assets.component.scss
+++ b/src/app/data-management/pages/buckets/assets/assets.component.scss
@@ -10,6 +10,7 @@
     font-weight: bold;
     font-size: 36px;
     margin-bottom: 0px;
+    padding-bottom: 10px;
   }
 }
 
